--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -17,9 +14,14 @@
      <h3> Push</h3>
      <p>per fare il push devi assicurarti che i cambiamenti da  parte del gruppo non ci sono stati
          in caso fai il <b>pull</b>
+         i comandi sono : <h2>
+             git add .
+             git commit -m "feat:(update file index.html)"
+             git push
+         </h2>
      </p> 
 
         
-        <script src="" async defer></script>
+       
     </body>
 </html>
