--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <h3> Push</h3>
      <p>per fare il push devi assicurarti che i cambiamenti da  parte del gruppo non ci sono stati
          in caso fai il <b>pull</b>
+         prova pull 
          i comandi sono : <h2>
              git add .
              git commit -m "feat:(update file index.html)"
