--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      <h1>merge</h1>
      <h3> Push</h3>
      <p>per fare il push devi assicurarti che i cambiamenti da  parte del gruppo non ci sono stati
-         in caso fai il <b>pull</b>
-         prova pull 
+          <b>pull</b>
+        
          i comandi sono : <h2>
              git add .
              git commit -m "feat:(update file index.html)"
