--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
              git commit -m "feat:(update file index.html)"
              git push
          </h2>
+         fare il pull 
+         git pull risolvi i conflitti fai git stash e alla fine git add . 
      </p> 
 
         
